--- a/411411209/411411209.html
+++ b/411411209/411411209.html
@@ -6,6 +6,7 @@
     <script src="star.js"></script>
     <script>
       function submitForm(event) {
+        event.preventDefault();
         window.location.href = 'thankyou.html';
       }
     </script>
