--- a/411411209/411411209.html
+++ b/411411209/411411209.html
@@ -7,7 +7,7 @@
     <script>
       function submitForm(event) {
         event.preventDefault();
-        window.location.href = 'thankyou.html';
+        window.location.href = 'https://yang525252.github.io/homeworktest/411411209/thankyou.html';
       }
     </script>
     <title>Document</title>
