--- a/411411209/411411209.html
+++ b/411411209/411411209.html
@@ -5,15 +5,21 @@
     <meta name="曾浩洋" content="411411209" />
     <script src="star.js"></script>
     <script>
-      function submitForm(event) {
+      /*function submitForm(event) {
         event.preventDefault();
         window.location.href = 'https://yang525252.github.io/homeworktest/411411209/thankyou.html';
+      }*/  
+      function redirectToThankYouPage() {
+          // 直接導向至指定的 URL
+          window.location.href = 'https://yang525252.github.io/homeworktest/411411209/thankyou.html';
       }
+    
     </script>
     <title>Document</title>
   </head>
   <body>
-    <form action="cgi-bin/get.exe" method="get" onsubmit="submitForm(event)">
+      <!-- <form action="cgi-bin/get.exe" method="get" onsubmit="submitForm(event)"> 這樣就沒有提交資料內容而是直接進入另一個網站，這應該可以運行但由於沒有伺服器可以返回所以就先這樣-->
+     <form id="myForm" onsubmit="event.preventDefault(); redirectToThankYouPage();">
       <h1>歡迎進入JobExam市調系統</h1>
       <p>請留個人資料</p>
       <p>姓名:<input type="text" name="user" autofocus /></p>
