--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       function redirectToThankYouPage() {
         // 直接導向至指定的 URL
         window.location.href =
-          'https://yang525252.github.io/homeworktest/411411209/thankyou.html';
+          'thankyou.html';
       }
     </script>
     <style>
